maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:11: error: ')' expected but 'case' found.
    			case 1 => gauche();
                        ^RandomMouseMaze:15: error: ')' expected but ';' found.
    	prendBiscuit();
                      ^